# CDX-AGENT

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  install-smoke.yml
docs/: configuration.md  graph_quality.md  linux_hpc_install.md  migration.md  windows_install.md
examples/: config.example.yaml
scripts/: install.ps1  install.sh
src/cdx_agent/: __init__.py  cli.py  config.py  context_docs.py  graph.py  hooks.py  launch.py  onboarding.py  runtime.py  session.py  skills.py  token_tools.py  workspace_mirror.py
tests/: conftest.py  test_cli.py  test_cli_commands.py  test_config.py  test_context_docs.py  test_graph_context_quality.py  test_graph_entrypoint_scoring.py  test_graph_import_resolution.py  test_graph_incremental.py  test_graph_scan_quality.py  test_graph_task_relevance.py  test_hook_scripts.py  test_hooks.py  test_launch.py  test_onboarding.py  test_runtime.py  test_session.py  test_skills.py  test_token_tools.py  test_workspace_mirror.py
