[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cdx-agent"
version = "0.1.0"
description = "Clean, cross-platform packaging for the CDX agent graph and context toolkit."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Sandeep KBM" },
]
keywords = ["agent", "graph", "workspace", "context", "codex"]
dependencies = [
  "PyYAML>=6.0.1",
  "tomli>=2.0.1; python_version < '3.11'",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Build Tools",
]

[project.urls]
Homepage = "https://github.com/sandeepKBM/CDX-AGENT"
Repository = "https://github.com/sandeepKBM/CDX-AGENT.git"

[project.scripts]
cdx-agent = "cdx_agent.cli:main"

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "pytest>=8.0",
  "ruff>=0.6",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
